--- a/getting-started/setup-basics/installation.mdx
+++ b/getting-started/setup-basics/installation.mdx
@@ -1,255 +1,246 @@
 ---
 title: "Installation Instructions"
-description: "Provides step-by-step installation guidance for GoogleTest and GoogleMock across major platforms (Linux, macOS, Windows) and common build systems (CMake, Bazel). Includes direct instructions and quickstart examples for verified installation routes."
+description: "Get step-by-step instructions to install GoogleTest and GoogleMock on Windows, macOS, and Linux, using supported build systems such as CMake and Bazel. This guide ensures that you can quickly get up and running, no matter your preferred platform or toolchain."
 ---
 
-# Installation Instructions for GoogleTest and GoogleMock
+# Installation Instructions
 
-This guide provides **clear, step-by-step instructions** to install GoogleTest and GoogleMock on your system using common build tools like **CMake**. Whether you are on Linux, macOS, or Windows, this page will walk you through verified installation methods and basic verification steps to get up and running quickly.
+Get step-by-step instructions to install GoogleTest and GoogleMock on Windows, macOS, and Linux, using supported build systems such as CMake and Bazel. This guide ensures that you can quickly get up and running, no matter your preferred platform or toolchain.
 
 ---
 
 ## 1. Prerequisites & System Requirements
 
-Before installing GoogleTest and GoogleMock, ensure your system meets the following requirements:
+Before beginning installation, ensure your environment meets the following requirements:
 
-- **Supported Platforms:** Linux, macOS, Windows
-- **Compiler:** A C++ compiler supporting at least **C++17** (e.g., GCC 7+, Clang 5+, MSVC 2017+)
-- **Build System:**
-  - **CMake** version 3.13 or later
-  - Optionally, **Bazel** if you prefer (not covered in detail here)
-- **Git:** Installed to clone repositories
-- **Permissions:**
-  - On Linux/macOS, `sudo` privileges for installing system-wide (optional)
+- **Supported Platforms:** Windows, macOS, Linux
+- **Compiler:** Must support C++17 or later
+- **Build Systems:** CMake (recommended, version 3.14 or later), Bazel (optional)
+- **Tools:** Git (for cloning the repository)
+- **Permissions:** Administrator or sudo privileges to install system-wide
 
-
-<Tip>
-Always verify you have CMake 3.13+ installed by running `cmake --version`. If not present, download it from [https://cmake.org/](https://cmake.org/).
-</Tip>
-
----
+> For detailed compiler and platform compatibility, see [Supported Platforms & Integration Points](/overview/feature-glance-integration/platforms-integration).
 
 ## 2. Installing GoogleTest and GoogleMock with CMake
 
-GoogleTest and GoogleMock are distributed together and can be built in a single step with CMake.
+GoogleTest and GoogleMock can be built and installed together using CMake. Follow the steps below to install them on your system:
 
-### 2.1 Cloning the Repository
+### Step 2.1: Clone the Repository
 
-Begin by cloning the official GoogleTest repository at the tagged release you want to use. For example, to get version 1.17.0:
+Open your terminal or command prompt and run:
 
 ```bash
-# Clone the googletest repository's stable branch
+# Clone the official GoogleTest repo at the stable v1.17.0 tag
 git clone https://github.com/google/googletest.git -b v1.17.0
 cd googletest
 ```
 
-### 2.2 Building as a Standalone Project
+### Step 2.2: Create a Build Directory
 
-1. Create a build directory to keep the build files separate:
+Create a separate directory to keep the build files isolated:
 
 ```bash
 mkdir build
 cd build
 ```
 
-2. Generate native build files using CMake:
+### Step 2.3: Configure the Build with CMake
 
-```bash
-cmake ..
-```
+- To build both GoogleTest and GoogleMock (recommended):
 
-- This command configures the build to include both GoogleTest and GoogleMock by default.
+  ```bash
+  cmake ..
+  ```
 
-- If you only want GoogleTest (without GoogleMock):
+- To build **only GoogleTest** (exclude GoogleMock):
 
-```bash
-cmake .. -DBUILD_GMOCK=OFF
-```
+  ```bash
+  cmake .. -DBUILD_GMOCK=OFF
+  ```
 
-3. Build the libraries:
+> If you are on Windows with Visual Studio installed, this generates a `.sln` file. On macOS with Xcode, a `.xcodeproj` will appear.
 
-```bash
-make
-```
+### Step 2.4: Build the Libraries
 
-4. (Optional) Install the libraries on your system (requires admin rights):
+- On Linux/macOS:
 
-```bash
-sudo make install
-```
+  ```bash
+  make
+  ```
 
-- This installs the libraries and headers under `/usr/local/` by default
+- On Windows:
+  Open the generated solution/project in Visual Studio and build it.
 
-### 2.3 Building on Windows with Visual Studio
+### Step 2.5: Install the Libraries
 
-- Run the `cmake ..` step in a PowerShell or Command Prompt within your build directory.
-- This will generate a `.sln` Visual Studio solution file.
-- Open the solution in Visual Studio and build the desired targets (e.g., ALL_BUILD, INSTALL).
+- On Linux/macOS:
 
-### 2.4 MacOS with Xcode
+  ```bash
+  sudo make install
+  ```
 
-- Running `cmake ..` generates an `.xcodeproj` project.
-- Open it with Xcode and build from there.
+- On Windows:
+  Follow your platform’s conventions to install or reference the built libraries.
 
----
+This installs GoogleTest and GoogleMock headers and binaries to default system locations (usually `/usr/local/include` and `/usr/local/lib`). You can customize this with CMake install prefix flags if needed.
 
-## 3. Integrating GoogleTest/GoogleMock Into Your Existing CMake Project
+### Verification
 
-To use GoogleTest and GoogleMock directly within your project's build:
+- Confirm the libraries are installed by checking the installed include and lib directories.
+- You can then compile a simple test program linking against the installed `gtest` and `gmock` libraries.
 
-### 3.1 Using Installed Libraries
+## 3. Integrating GoogleTest and GoogleMock Into Your CMake Project
 
-After system-wide installation, you can import GoogleTest and GoogleMock via CMake `find_package`:
+### Simple Integration Using Installed Libraries
+
+In your project's `CMakeLists.txt`, add:
 
 ```cmake
 find_package(GTest CONFIG REQUIRED)
-# Use the libraries for your targets
-target_link_libraries(your_target PRIVATE GTest::gtest GTest::gmock)
+
+add_executable(your_test_exe test_main.cpp)
+
+# Link GoogleTest and GoogleMock libraries
+# Use gtest_main for default main() or gtest if you write your own.
+target_link_libraries(your_test_exe GTest::gtest_main GTest::gmock)
+
+add_test(NAME your_test COMMAND your_test_exe)
 ```
 
-### 3.2 Building GoogleTest as Part of Your Project
+This requires that GoogleTest and GoogleMock are installed in a location CMake can find.
 
-Add GoogleTest as a subdirectory to your project’s `CMakeLists.txt`:
+### Building GoogleTest Directly Within Your Project via add_subdirectory()
+
+To avoid dependency on an installed version, include GoogleTest sources in your repo or as a git submodule, and use:
 
 ```cmake
 include(FetchContent)
+
 FetchContent_Declare(
   googletest
   URL https://github.com/google/googletest/archive/5376968f6948923e2411081fd9372e71a59d8e77.zip
 )
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)  # For Visual Studio runtime compatibility
+
+# For Windows: Match runtime libraries
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+
 FetchContent_MakeAvailable(googletest)
 
-add_executable(example_test example.cpp)
-target_link_libraries(example_test PRIVATE gtest_main gmock_main)
-add_test(NAME example_test COMMAND example_test)
+add_executable(your_test_exe test_main.cpp)
+target_link_libraries(your_test_exe gtest_main gmock_main)
+add_test(NAME your_test COMMAND your_test_exe)
 ```
 
-- Requires **CMake 3.14+**
-- This approach ensures consistent compiler and linker flags across your project and tests.
+**Note:** This requires CMake version 3.14 or later for `FetchContent_MakeAvailable()`.
 
----
+## 4. Installing with Bazel
 
-## 4. Verification: Confirming Successful Installation
+If you use Bazel as your build system, GoogleTest and GoogleMock are available as dependencies:
 
-### 4.1 Build Verification
+Add the following to your `WORKSPACE` file:
 
-After building with CMake, verify the libraries exist:
+```starlark
+http_archive(
+    name = "com_google_googletest",
+    urls = ["https://github.com/google/googletest/archive/release-1.17.0.zip"],
+    strip_prefix = "googletest-release-1.17.0",
+)
+```
 
-- Check `build/lib` or `build/` directories for `libgtest.a`, `libgmock.a` (or `.lib` on Windows).
-- On Unix-like systems:
+Then, in your BUILD files, declare dependencies on `@com_google_googletest//:gtest` and `@com_google_googletest//:gmock` as needed.
+
+For detailed Bazel integration, see the Bazel-specific documentation (not covered here).
+
+## 5. Building and Running Your First Test
+
+After installation, you can verify your setup by compiling a simple test:
+
+```c++
+#include "gtest/gtest.h"
+
+TEST(SampleTest, AssertionTrue) {
+  EXPECT_TRUE(true);
+}
+
+int main(int argc, char **argv) {
+  ::testing::InitGoogleTest(&argc, argv);
+  return RUN_ALL_TESTS();
+}
+```
+
+### Compile and Link Example (Linux/macOS with g++)
 
 ```bash
-ldconfig -p | grep gtest
+g++ -std=c++17 -isystem /usr/local/include -pthread sample_test.cpp \
+    -L/usr/local/lib -lgtest_main -lgtest -lgmock -o sample_test
 ```
 
-(if installed to system paths)
-
-### 4.2 Running Example Tests
-
-GoogleTest provides example test executables you can build and run:
+Run the sample test:
 
 ```bash
-./example  # Or the name of your test executable
+./sample_test
 ```
 
-You should see output like:
+Expected output:
 
 ```
-Running main() from ...
 [==========] Running 1 test from 1 test suite.
-[ RUN      ] ExampleTest.DoesSomething
-[       OK ] ExampleTest.DoesSomething (0 ms)
-[==========] 1 test from 1 test suite ran. (1 ms total)
+[----------] Global test environment set-up.
+[----------] 1 test from SampleTest
+[ RUN      ] SampleTest.AssertionTrue
+[       OK ] SampleTest.AssertionTrue (0 ms)
+[----------] 1 test from SampleTest (0 ms total)
+
+[----------] Global test environment tear-down
+[==========] 1 test from 1 test suite ran. (0 ms total)
 [  PASSED  ] 1 test.
 ```
 
----
+## 6. Tips and Best Practices
 
-## 5. Common Build Options and Tips
+- Use `gtest_main` or `gmock_main` to avoid writing your own `main()`; they provide the necessary test program entry point.
+- On Windows with Visual Studio, if you encounter runtime library mismatches, use the `-Dgtest_force_shared_crt=ON` flag when configuring CMake.
+- To optimize build times on large projects, incorporate GoogleTest via `add_subdirectory()` or the FetchContent module rather than installing globally.
+- Always specify `-std=c++17` or higher to comply with GoogleTest's C++ standard requirement.
+- If you face linking errors related to pthreads, ensure your build system links with the pthread library; using GoogleTest’s CMake scripts automatically manages this.
 
-- To build GoogleTest/GoogleMock as **shared libraries (DLLs)**, add the flag:
-
-```bash
-cmake .. -DBUILD_SHARED_LIBS=ON
-```
-
-- On Windows, if you encounter runtime library mismatch errors (such as linking static vs dynamic CRT), enable:
-
-```bash
--DCMAKE_MSVC_RUNTIME_LIBRARY="MultiThreadedDLL"
-```
-
-or set `gtest_force_shared_crt` in your `CMakeLists.txt` as shown above.
-
-- For **multi-threaded tests**, CMake scripts automatically link against pthread on supported platforms.
-  If you build manually, ensure to link with `-pthread`.
-
-- If you only want to use GoogleTest without GoogleMock, turn off GoogleMock during CMake configuration:
-
-```bash
-cmake .. -DBUILD_GMOCK=OFF
-```
-
----
-
-## 6. Troubleshooting Common Issues
+## 7. Troubleshooting Common Issues
 
 <AccordionGroup title="Installation Troubleshooting">
-<Accordion title="CMake version too old or missing">
+<Accordion title="CMake cannot find GoogleTest package">
+Make sure GoogleTest and GoogleMock are installed in standard system paths or specify the path explicitly:
 
-Make sure you have CMake 3.13 or later installed. Run `cmake --version` to check. If the version is insufficient, download and install the latest from https://cmake.org/.
+```cmake
+set(CMAKE_PREFIX_PATH "/path/to/googletest/install" ${CMAKE_PREFIX_PATH})
+find_package(GTest CONFIG REQUIRED)
+```
 
+Alternatively, use `add_subdirectory()` to add GoogleTest sources directly to your build.
 </Accordion>
-<Accordion title="Linker errors related to pthread on Linux/macOS">
+<Accordion title="Linker Errors on Windows related to Runtime Library">
+This typically occurs due to inconsistent settings between your project and GoogleTest's runtime library.
 
-If you encounter errors like undefined references to pthread functions, ensure your build links with pthread:
+**Solution:** enable dynamic runtime linking by adding `-Dgtest_force_shared_crt=ON` when configuring your build:
 
-- When using CMake, this is usually automatic.
-- If building manually, add `-pthread` to compiler and linker flags.
-
+```bash
+cmake .. -Dgtest_force_shared_crt=ON
+```
 </Accordion>
-<Accordion title="RuntimeLibrary mismatch errors on Windows">
+<Accordion title="Missing pthread symbols on Linux">
+If your linker reports missing pthread symbols (e.g., `pthread_create`), ensure you add `-pthread` to your compile flags and link flags.
 
-You may get errors such as `mismatch detected for 'RuntimeLibrary'`.
-
-- Enable the `gtest_force_shared_crt` option in CMake to unify runtime linkage.
-- For example:
-
-  ```bash
-  cmake .. -Dgtest_force_shared_crt=ON
-  ```
-
-- Also ensure your project's runtime flags match (dynamic vs static CRT).
-
-</Accordion>
-<Accordion title="Tests not running or no output">
-
-Verify you are linking with `gtest_main` or `gmock_main` which provide a `main()` function.
-
-If writing your own `main()`, call `testing::InitGoogleTest()` or `testing::InitGoogleMock()` before `RUN_ALL_TESTS()`.
-
+When using CMake, this is handled automatically. If using a manual build script, add `-pthread`.
 </Accordion>
 </AccordionGroup>
 
----
+## 8. Useful Links & Further Reading
 
-## 7. Next Steps
-
-- Explore the [Getting Started Guide](/getting-started/setup-basics/configuring-project) to learn how to integrate tests with your project.
-- Read the [Primer](https://github.com/google/googletest/blob/main/docs/primer.md) for a comprehensive GoogleTest introduction.
-- For mocking, check the [gMock README](https://github.com/google/googletest/blob/main/googlemock/README.md) and [gMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html).
-
----
-
-## References & Further Reading
-
-- CMakeLists.txt: [googlemock/CMakeLists.txt](https://github.com/google/googletest/blob/main/googlemock/CMakeLists.txt)
-- GoogleTest Build Guide: [googletest/README.md](https://github.com/google/googletest/blob/main/googletest/README.md)
-- GoogleMock Overview: [googlemock/README.md](https://github.com/google/googletest/blob/main/googlemock/README.md)
+- [GoogleTest Primer](primer.md) — Learn how to write your first tests.
+- [Supported Platforms & Integration Points](/overview/feature-glance-integration/platforms-integration) — Understand supported environments.
+- [First Test Experience: Initial Configuration](getting-started/first-test-experience/initial-configuration) — Setup tests after installation.
+- [Building with Bazel](https://github.com/google/googletest/blob/main/googletest/README.md#using-with-bazel) — Bazel-specific instructions.
+- [GoogleMock README](googlemock/README.md) — Learn about the mocking framework and usage.
 
 ---
 
-<Check>
-By following these steps, GoogleTest and GoogleMock should be installed, built, and ready for use. Running your first tests will confirm that the installation succeeded.
-</Check>
+This installation guide equips you with all necessary steps to get GoogleTest and GoogleMock installed via the most common, supported build systems and platforms. Once installed, you will be ready to write, build, and run your C++ tests efficiently.
