--- a/getting-started/first-test-experience/writing-first-test.mdx
+++ b/getting-started/first-test-experience/writing-first-test.mdx
@@ -1,207 +1,213 @@
 ---
 title: "Writing and Running Your First Test"
-description: "Walks users through creating a simple test case using GoogleTest, compiling it with the chosen build system, and executing the resulting test binary. Illustrates the minimal steps required to see tangible results."
+description: "Walk through creating a minimal C++ unit test with GoogleTest, compiling it, and executing your test binary. This page gives a hands-on, copy-paste-friendly example so you can go from zero to green test in minutes."
 ---
 
-# Writing and Running Your First Test
+# Writing and Running Your First Test with GoogleTest
 
-Welcome to your first step with GoogleTest! This guide will walk you through writing a simple test case using the GoogleTest framework, compiling it with your chosen build system, and running the resulting test binary. You'll see exactly how to get visible, meaningful test results with minimal effort.
-
----
-
-## 1. Prerequisites & Setup
-
-Before jumping into writing your first test, ensure your environment is prepared:
-
-- **Build System Ready:** GoogleTest integrates well with CMake, Bazel, or any system that can build C++.
-- **GoogleTest Installed and Linked:** Follow the installation guides to have GoogleTest libraries and headers available in your project.
-- **Basic C++ Knowledge:** Understanding of C++ syntax and compiling.
-
-If you haven't installed GoogleTest yet, see the [Installation on Standard Platforms](../setup-installation/installing-standard-platforms) and [Configuration Basics](../setup-installation/configuration-basics) guides.
+Welcome to your first hands-on experience with GoogleTest! This guide walks you through writing a minimal C++ unit test, compiling it, and running your test binary to verify success. By the end, you'll have a complete test executable running a simple test that passes — getting you confidently from zero to green.
 
 ---
 
-## 2. Writing Your First Test
+## 1. Writing a Minimal Test
 
-### 2.1. Create a Test Function
+GoogleTest simplifies testing by letting you write tests as regular C++ functions decorated with the `TEST` macro. Here's how to write your very first test.
 
-GoogleTest's core is the `TEST` macro, which lets you define tests as simple C++ functions grouped in test suites. Here's the minimal example:
+### Step 1: Create a test source file
+
+Create a new C++ source file, for example `sample_test.cpp`. Inside, include the GoogleTest header:
 
 ```cpp
 #include <gtest/gtest.h>
+```
 
-// This test is in the "SampleTest" suite, and named "Works".
-TEST(SampleTest, Works) {
-  EXPECT_EQ(1, 1);  // An assertion that always succeeds
+### Step 2: Define a simple test case
+
+Use the `TEST` macro to define a test. It takes two arguments: the test suite name, and the test name. Names should be valid C++ identifiers and, for best practices, avoid underscores (_).
+
+```cpp
+// A simple test that checks 1 + 1 == 2
+TEST(SimpleMath, OnePlusOne) {
+  EXPECT_EQ(1 + 1, 2);
 }
 ```
 
-- **Test Suite Name:** `SampleTest` (grouping of related tests).
-- **Test Name:** `Works` (a single test case inside the suite).
+- `SimpleMath` is the test suite – a logical grouping of related tests.
+- `OnePlusOne` is the name of this specific test inside that suite.
+- `EXPECT_EQ` is an assertion verifying the left and right expressions are equal.
 
-You can write any valid C++ code inside the `TEST` body and use assertions to verify behavior.
+You can have multiple tests per suite, and multiple suites within your program.
 
-### 2.2. Assertions Overview
+### Step 3: Write multiple tests (optional)
 
-Use assertions like `EXPECT_EQ`, `ASSERT_TRUE`, `EXPECT_FALSE` to state expected conditions. For example:
+Add more tests to cover different checks:
 
 ```cpp
-EXPECT_EQ(actual_value, expected_value);
-ASSERT_TRUE(condition);
-EXPECT_FALSE(condition);
-```
+TEST(SimpleMath, TwoTimesTwo) {
+  EXPECT_EQ(2 * 2, 4);
+}
 
-`EXPECT_` assertions will report failures but continue executing the test, while `ASSERT_` assertions abort the current test function on failure.
+TEST(SimpleMath, IntegerDivision) {
+  EXPECT_EQ(6 / 3, 2);
+}
+```
 
 ---
 
-## 3. Compiling Your Test
+## 2. Compiling Your Test
 
-With your source file written, compile it linking against GoogleTest libraries.
+You need to compile your test source with the GoogleTest library.
 
-### Example with g++ and pkg-config:
+### Step 1: Set up include and link paths
 
-```shell
-g++ -std=c++11 -pthread your_test.cc -o your_test \
-  $(pkg-config --cflags --libs gtest_main)
+Make sure your compiler can find GoogleTest’s headers and link with its libraries. This typically means adding `-I` flags for include directories and `-L` and `-lgtest` flags for linking.
+
+Example compilation command using g++:
+
+```bash
+g++ -std=c++17 -isystem /usr/local/include -pthread sample_test.cpp -L/usr/local/lib -lgtest -lgtest_main -o sample_test
 ```
 
-- `-pthread` enables multithreading support, required by GoogleTest.
-- `gtest_main` includes a default `main()` to run tests.
+- Adjust `/usr/local/include` and `/usr/local/lib` to the paths where GoogleTest is installed.
+- The `-pthread` flag is required on POSIX systems for threading support.
 
-For CMake or Bazel, refer to [Test Discovery and Build Integration](../../guides/getting-started/test-discovery-setup) for examples.
+If you installed GoogleTest via a package manager, these paths and flags may vary or be configured by your build system.
 
-### Verification
+### Step 2: Verify compilation
 
-Run the compiled test:
+The above command should generate an executable `sample_test`. If you have errors about missing headers or libraries, verify the installation paths and library availability.
 
-```shell
-./your_test
+---
+
+## 3. Running Your Test Binary
+
+### Step 1: Execute the test program
+
+Run the compiled binary:
+
+```bash
+./sample_test
 ```
 
-You should see output similar to:
+### Expected output on success:
 
 ```
-[==========] Running 1 test from 1 test suite.
+[==========] Running 3 tests from 1 test suite.
 [----------] Global test environment set-up.
-[----------] 1 test from SampleTest
-[ RUN      ] SampleTest.Works
-[       OK ] SampleTest.Works (0 ms)
-[----------] 1 test from SampleTest (0 ms total)
+[----------] 3 tests from SimpleMath
+[ RUN      ] SimpleMath.OnePlusOne
+[       OK ] SimpleMath.OnePlusOne (0 ms)
+[ RUN      ] SimpleMath.TwoTimesTwo
+[       OK ] SimpleMath.TwoTimesTwo (0 ms)
+[ RUN      ] SimpleMath.IntegerDivision
+[       OK ] SimpleMath.IntegerDivision (0 ms)
+[----------] 3 tests from SimpleMath (0 ms total)
 
 [----------] Global test environment tear-down
-[==========] 1 test from 1 test suite ran. (0 ms total)
-[  PASSED  ] 1 test.
+[==========] 3 tests from 1 test suite ran. (0 ms total)
+[  PASSED  ] 3 tests.
 ```
 
-This confirms your test ran successfully.
+This output means all tests passed.
+
+### Step 2: Interpreting failures (if any)
+
+If any assertion fails, GoogleTest marks the test as failed and prints failure details:
+
+```
+[ RUN      ] SimpleMath.OnePlusOne
+sample_test.cpp:5: Failure
+Expected equality of these values:
+  1 + 1
+    Which is: 3
+  2
+[  FAILED  ] SimpleMath.OnePlusOne (0 ms)
+```
+
+Read the message to identify which test and assertion failed.
 
 ---
 
-## 4. Running Your First Test Step-by-Step
-
-Follow this flow to see your test in action:
-
-<Steps>
-<Step title="Write the Test Code">
-Create a new C++ file (e.g., `first_test.cc`) and add the following minimal test:
+## 4. A Full Example: sample_test.cpp
 
 ```cpp
 #include <gtest/gtest.h>
 
-TEST(FirstTestSuite, FirstTestCase) {
-  EXPECT_EQ(1, 1);
+// Tests that 1 + 1 equals 2.
+TEST(SimpleMath, OnePlusOne) {
+  EXPECT_EQ(1 + 1, 2);
+}
+
+// Tests that 2 * 2 equals 4.
+TEST(SimpleMath, TwoTimesTwo) {
+  EXPECT_EQ(2 * 2, 4);
+}
+
+// Tests integer division 6 / 3 equals 2.
+TEST(SimpleMath, IntegerDivision) {
+  EXPECT_EQ(6 / 3, 2);
+}
+
+int main(int argc, char **argv) {
+  testing::InitGoogleTest(&argc, argv);
+  return RUN_ALL_TESTS();
 }
 ```
-</Step>
-<Step title="Compile the Test">
-Use a compiler command like this (adjust as needed):
 
-```bash
-g++ -std=c++11 -pthread first_test.cc -o first_test $(pkg-config --cflags --libs gtest_main)
-```
-
-Check for compilation errors and warnings.
-</Step>
-<Step title="Run the Test">
-Execute the test binary:
-
-```bash
-./first_test
-```
-
-Validate the console output shows your test running and passing.
-</Step>
-</Steps>
+Compile and run as previously shown. Note the `main()` function initializes GoogleTest and runs all tests.
 
 ---
 
-## 5. Understanding the Output
+## 5. Best Practices and Tips
 
-When the test runs, GoogleTest reports:
-
-- Test suite and test count.
-- Which tests are running (`[ RUN      ] ...`).
-- Test results (`[       OK ]`, `[  FAILED  ]`, `[  SKIPPED ]`).
-- Elapsed time per test and overall.
-
-If a test fails, GoogleTest provides detailed failure messages with file and line information.
+- **Avoid underscores in test suite and test names**: Names like `SimpleMath` and `OnePlusOne` help prevent name collisions and compiler issues.
+- **Use meaningful test names**: Describe what the test verifies, to ease understanding.
+- **Call `InitGoogleTest` before running tests**: Always pass command-line arguments here to support GoogleTest flags.
+- **Return the result of `RUN_ALL_TESTS` in `main()`**: Ensures correct exit code for CI systems.
+- **Use `EXPECT_` assertions for non-fatal checks**: Allows multiple checks per test.
+- **Use `ASSERT_` assertions when failure means the test cannot continue**, e.g., when setup is required.
 
 ---
 
-## 6. Tips & Best Practices
+## 6. Troubleshooting Common Issues
 
-- Use descriptive, concise test suite and test names without underscores (avoid `_`) to prevent unexpected conflicts.
-- Prefer `EXPECT_` assertions where subsequent checks are meaningful.
-- Use `ASSERT_` assertions when failures must abort the test early.
-- Link with `gtest_main` to avoid writing your own `main()`.
-- Make sure to call `testing::InitGoogleTest()` if writing a custom `main()`.
-
----
-
-## 7. Troubleshooting
-
-- If your test does not run, verify the build links against GoogleTest libraries correctly.
-- If tests are not discovered, confirm your test binary is built with GoogleTest’s `TEST` or `TEST_F` macros.
-- Use the flag `--gtest_list_tests` to list all tests recognized in a binary.
-
-For detailed troubleshooting, see [Troubleshooting Common Setup Issues](../first-test-experience/troubleshooting-common-issues).
-
----
-
-## 8. Next Steps
-
-After running your first test, explore:
-
-- Writing tests with fixtures (use `TEST_F()` for shared setup).
-- Using more advanced assertions (see [Assertions Reference](../reference/assertions.md)).
-- Organizing tests with parameterization and typed tests.
-- Integrating with your build system for automation.
-
-See the [GoogleTest Primer](../primer.md) for a broader conceptual introduction and [Getting Started with Mocking](../../guides/getting-started/mocking-basics) for mocking techniques.
+<AccordionGroup title="Troubleshooting Steps">
+  <Accordion title="Test binary does not compile">
+  - Verify your compiler supports C++17.
+  - Check GoogleTest include and library paths.
+  - Added `-pthread` flag on POSIX systems.
+  - Confirm GoogleTest is installed and visible to your build system.
+  </Accordion>
+  <Accordion title='No tests run or "0 tests" reported'>
+  - Ensure your test functions use the `TEST` or `TEST_F` macros correctly.
+  - Confirm `InitGoogleTest` is called in `main`.
+  - Check that your tests do not have the `DISABLED_` prefix.
+  </Accordion>
+  <Accordion title="Tests fail unexpectedly">
+  - Read failure messages carefully.
+  - Use GoogleTest assertions like `EXPECT_EQ`, `ASSERT_TRUE` for precise diagnostics.
+  - Use `SCOPED_TRACE` to add context if tests call helper functions.
+  </Accordion>
+  <Accordion title="Test output is cluttered or unreadable">
+  - Use flags `--gtest_color=yes` to enable colors.
+  - Redirect output and use filters for selective runs.
+  </Accordion>
+</AccordionGroup>
 
 ---
 
-Happy Testing!
+## 7. Next Steps
+
+Now that you’ve written and run your first test:
+
+- Explore [GoogleTest Primer](primer.md) to deepen your understanding of writing tests.
+- Learn about [Assertions Reference](reference/testing.md#assertions) to use more powerful checks.
+- Try using [Test Fixtures](primer.md#same-data-multiple-tests) with `TEST_F` for shared test setup.
+- Discover [Parameterized and Typed Tests](guides/practical-testing-patterns/parameterized-testing) to avoid repetitive test code.
+- Check out [Mocking Your First Class or Function](guides/getting-started/first-mock) to test complex interactions.
+
+For build integration and detailed install, refer to the [Installation Instructions](getting-started/setup-basics/installation).
 
 ---
 
-# Visual Diagram of Your First Test Flow
-
-```mermaid
-flowchart TD
-  Start([Start]) --> Write["Write your test code using TEST macro"]
-  Write --> Compile["Compile your test program linking GoogleTest"]
-  Compile --> Run["Run the test binary"]
-  Run --> Result{Test passes?}
-  Result -->|Yes| Pass["Test Passed: see OK output"]
-  Result -->|No| Fail["Test Failed: see detailed error message"]
-  Pass --> End([End])
-  Fail --> End
-```
-
----
-
-*This document focuses exclusively on creating and running your first basic test with GoogleTest. For more detailed topics, please consult other parts of the documentation.*
-
----
+**Congratulations!** You are now ready to add tests and grow your test suite with confidence using GoogleTest.
