--- a/getting-started/first-test-experience/quick-validation.mdx
+++ b/getting-started/first-test-experience/quick-validation.mdx
@@ -1,207 +1,165 @@
 ---
-title: "Validating Your Setup"
-description: "A checklist and troubleshooting guide to ensure your installation and first test ran correctly. Provides steps to check your environment, interpretation of common errors, and pointers to further help resources."
+title: "Quick Validation Checklist"
+description: "Use this checklist to confirm that your GoogleTest and GoogleMock setup is working as intended. Run a basic test, verify successful output, and diagnose common first-run issues to build confidence in your toolchain."
 ---
 
-# Validating Your Setup
+# Quick Validation Checklist
 
-This page provides a practical checklist and troubleshooting guide to ensure your GoogleTest installation and your first test run correctly. It helps you verify your environment, interpret common error messages, and points to additional resources for assistance.
-
----
-
-## 1. Essential Environment Checks
-
-Before you run your first test, confirm that your setup meets all the necessary conditions:
-
-- **Verify Compiler Compatibility**: Ensure your compiler version meets GoogleTest's requirements (see [Prerequisites & Supported Platforms](/getting-started/setup-requirements/prerequisites) for details).
-- **Confirm Build and Linkage**: Your project must properly link with `gtest` and `gmock` libraries. If using `gtest_main`, the default main() is provided.
-- **Check CMake or Bazel Integration**: Make sure your build files include GoogleTest as described in installation guides (e.g., [Installing on Linux/macOS](/getting-started/installation-guides/linux-macos-install) or [Using Bazel for Build & Test](/getting-started/installation-guides/bazel-integration)).
-- **Review Environment Variables**: Confirm no conflicting environment variables interfere with your test execution.
-
-<Tip>
-Running your build and link commands with verbose flags (e.g., `VERBOSE=1` for CMake) helps reveal any linkage or dependency problems early.
-</Tip>
+Ensure your GoogleTest and GoogleMock installation and setup are working correctly with this checklist. Follow these steps to write and run a basic test, verify successful output, and troubleshoot common issues. This guide helps you confirm your toolchain is ready to provide reliable C++ testing.
 
 ---
 
-## 2. Running Your First Test
+## 1. Write a Basic Test
 
-Once your environment is prepared, attempt running your test executable. Here's what to do:
-
-<Steps>
-<Step title="Initialize and Run Tests">
-Invoke `RUN_ALL_TESTS()` in your `main()` function or link against `gtest_main` to automatically provide main().
+Begin with a simple test to verify the framework is functioning as expected.
 
 ```cpp
-int main(int argc, char** argv) {
-  testing::InitGoogleTest(&argc, argv);
-  return RUN_ALL_TESTS();
+#include <gtest/gtest.h>
+
+// A trivial test that always succeeds
+TEST(SanityCheck, BasicAssertion) {
+  EXPECT_TRUE(true);
 }
 ```
 
-Ensure this function is called before running tests.
-</Step>
-<Step title="Execute the Test Binary">
-Run the compiled test binary from your command line or IDE.
+### Tips:
+- Use the `TEST()` macro for simple, fixture-less tests.
+- Avoid underscores (`_`) in test and test suite names to prevent naming conflicts (see [FAQ on underscores](../faq.md#why-should-test-suite-names-and-test-names-not-contain-underscore)).
 
-Expected behavior:
 
-- Tests will run sequentially.
-- Output will indicate passed and failed tests.
-</Step>
-<Step title="Interpret Output">
-Look for:
+## 2. Compile Your Test
 
-- `PASSED` messages indicating successful tests.
-- Failure messages highlighted with file and line numbers.
+Make sure to link against the GoogleTest libraries properly.
 
-If the test binary fails to run, confirm your system path and dependencies.
-</Step>
-</Steps>
+### Using CMake
 
-<Check>
-If your test does not run or crashes immediately, check for build or runtime errors as detailed in the troubleshooting section below.
-</Check>
+```cmake
+find_package(GTest REQUIRED)
+target_link_libraries(your_test_target GTest::gtest GTest::gtest_main)
+```
 
----
+### Manual Compile Command Example
 
-## 3. Common Errors and How to Diagnose Them
+```bash
+g++ -std=c++17 -isystem /path/to/googletest/include \
+    -pthread your_test.cc /path/to/libgtest.a /path/to/libgtest_main.a -o your_test
+```
 
-This section outlines typical issues you may encounter during validation and solutions.
+### Tips:
+- Ensure C++17 or later is used as required by GoogleTest.
+- Link both `gtest` and `gtest_main` if you rely on the default `main`.
 
-### Build and Link Errors
 
-- **Undefined References**: Often caused by missing linkage to `gtest` or `gmock`.
-  - *Solution*: Confirm you link your test executable with `-lgtest -lgmock` (or relevant static libraries).
-- **Runtime Library Mismatch** (Windows): Occurs if CRT linkage differs between your code and GoogleTest.
-  - *Solution*: Build GoogleTest with the same runtime as your project (see platform-specific guides).
+## 3. Run the Test Binary
 
-### Test Failures Immediately After Running
+Execute the test program.
 
-- **Failure: Tests Not Found or Skipped**
-  - *Cause*: Tests might not be registered properly.
-  - *Solution*: Ensure `TEST()` or `TEST_F()` macros are used and your test files are linked.
+```bash
+./your_test
+```
 
-- **Uninteresting Mock Function Call Warnings**
-  - *Cause*: A mock method was called without any expectations set.
-  - *Solution*: Set expectations using `EXPECT_CALL()` or use `NiceMock` to suppress warnings.
-  - Use `--gmock_verbose=info` to trace mock calls for insight.
+You should see output similar to:
 
-### Unexpected Test Behavior
+```
+[==========] Running 1 test from 1 test suite.
+[----------] Global test environment set-up.
+[----------] 1 test from SanityCheck
+[ RUN      ] SanityCheck.BasicAssertion
+[       OK ] SanityCheck.BasicAssertion (0 ms)
+[----------] 1 test from SanityCheck (0 ms total)
 
-- **Tests Always Passing or Failing Unexpectedly**
-  - *Cause*: Missing `RUN_ALL_TESTS()` call or improper initialization.
-  - *Solution*: Verify your `main()` calls `testing::InitGoogleTest()` and `RUN_ALL_TESTS()` exactly once.
+[----------] Global test environment tear-down
+[==========] 1 test from 1 test suite ran. (0 ms total)
+[  PASSED  ] 1 test.
+```
 
-- **Crash in Destruction of Mock Objects**
-  - *Cause*: Base classes lack virtual destructors.
-  - *Solution*: Add a virtual destructor to all base classes used by mocks.
+### Tips:
+- This confirms that GoogleTest is installed and configured correctly.
+- If you see errors, check include paths, linking, and runtime environment.
 
----
 
-## 4. Tips for Effective Validation
+## 4. Verify Output and Interpretation
 
-- **Use Verbose Output**
-  Run your test executable with:
+- `[ RUN ]` indicates a test is starting.
+- `[       OK ]` shows that a test passed.
+- `[  FAILED  ]` means a test failed. Review the messages printed below for cause.
+- The summary shows the total number of tests run and their results.
 
-  ```shell
-  ./your_test_binary --gmock_verbose=info --gtest_repeat=1
-  ```
 
-  This logs detailed mock call information and test execution flow.
+## 5. Diagnose Common Issues
 
-- **Verify Default Actions for Mock Methods**
-  If a mock method returns a value but you have not specified a return action, GoogleTest provides a default. Confirm this matches your test's needs or set explicit `ON_CALL` or `EXPECT_CALL` actions.
-
-- **Check Call Ordering if Sequence Matters**
-  Use `InSequence` or `After` clauses to enforce call order in mocks and ensure your setup respects these constraints.
-
-- **Run Tests One by One**
-  Use `--gtest_filter=TestSuiteName.TestName` to isolate and debug specific tests.
-
----
-
-## 5. Where to Go From Here
-
-- For detailed installation problems, consult [Installation Overview](/getting-started/setup-requirements/installation-overview) and platform-specific guides.
-- To learn how to write and run tests, including setting up project files, see [Writing & Running Your First Test](/getting-started/first-test-experience/writing-your-first-test) and [Project Setup & Configuration](/getting-started/first-test-experience/project-setup).
-- For understanding and using mocks effectively, see the [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html) and [Mocking Reference](/api-reference/mocking-apis/mock-class-definition).
-- If you face specific issues, explore the [Troubleshooting & Best Practices FAQ](/faq/troubleshooting-and-best-practices/build-and-link-errors).
-- Get help from the community or report issues at the [Support & Community Resources](/faq/support-and-community/where-to-get-help).
-
----
-
-## 6. Troubleshooting Quick Reference
-
-<AccordionGroup title="Common Issues">
-<Accordion title="Build fails with undefined references to gtest or gmock">
-Verify your linker flags include `-lgtest -lgmock` or equivalent static libs.
-Check your CMake or Bazel build files for correct GoogleTest target dependencies.
+<AccordionGroup title="Common Problems and Solutions">
+<Accordion title="Compilation Errors Related to Missing Headers or Libraries">
+Check that the compiler include path contains the `googletest/include` directory and linker paths include `libgtest.a` and `libgtest_main.a` (or respective shared libraries). Also ensure you compile with C++17 or later.
 </Accordion>
-
-<Accordion title="Test executable runs but no tests execute">
-Ensure all test files are linked and contain valid `TEST()` / `TEST_F()`.
-Confirm `RUN_ALL_TESTS()` runs in your `main()`.
+<Accordion title="Linker Errors About Undefined References">
+Verify that you are linking both `gtest` and `gtest_main` libraries. Remember you must link against the same build type (Debug/Release) as your test.
 </Accordion>
-
-<Accordion title="Warnings about uninteresting mock calls">
-Set expectations on the called mock methods using `EXPECT_CALL()`.
-Suppress warnings using `NiceMock` when appropriate.
-Use `--gmock_verbose=info` to understand mock call patterns.
+<Accordion title="Tests Not Running or Missing Tests">
+If no tests appear to run, check the naming rules: test suite and test names cannot contain underscores and must be valid C++ identifiers. Also ensure you have called `testing::InitGoogleTest()` in your `main()` before `RUN_ALL_TESTS()`.
 </Accordion>
-
-<Accordion title="GoogleMock complains about missing virtual destructors">
-Add virtual destructors to all polymorphic base classes you intend to mock.
-Ensure destructors are `virtual` to prevent memory leaks and undefined behavior.
-</Accordion>
-
-<Accordion title="Tests fail or crash unexpectedly">
-Run with `--gtest_repeat=1` and `--gmock_verbose=info` to get detailed tracing.
-Check your test setup for exception safety and memory issues.
+<Accordion title="Test Crashes or Unexpected Behavior">
+Ensure your test code and fixtures themselves do not cause crashes. Use `EXPECT_` over `ASSERT_` to allow multiple failures per run. Review the document on [Death Tests](reference/assertions.md#death) if your tests intentionally crash.
 </Accordion>
 </AccordionGroup>
 
+
+## 6. Next Steps
+
+- Consult the [GoogleTest Primer](primer.md) to learn how to write more comprehensive tests.
+- Explore the full [Assertions Reference](reference/assertions.md) to understand all available assertion macros.
+- Review [Writing and Running Your First Test](getting-started/first-test-experience/writing-first-test.md) for a guided tutorial.
+- Use the [Troubleshooting Common Issues](getting-started/troubleshooting/common-issues.md) document to resolve setup hurdles.
+
+
+## 7. Sample `main()` Function
+
+If you write your own `main()`, follow this pattern:
+
+```cpp
+#include <gtest/gtest.h>
+
+int main(int argc, char** argv) {
+  testing::InitGoogleTest(&argc, argv);  // Parse command-line flags
+  return RUN_ALL_TESTS();                // Run all registered tests
+}
+```
+
+Note: Avoid ignoring the return value of `RUN_ALL_TESTS()` as test result depends on it.
+
+
+## 8. Useful Command-Line Flags During Early Adoption
+
+- `--gtest_list_tests`
+
+  Lists all tests without running them.
+
+- `--gtest_filter=TestSuiteName.TestName`
+
+  Runs specific tests.
+
+- `--gtest_color=yes|no|auto`
+
+  Controls colored output.
+
+
+---
+
+<Tip>
+Always ensure test names and suite names do NOT contain underscores to avoid subtle issues and conflicts.
+</Tip>
+
 <Note>
-Problems not resolved here can often be solved by ensuring your system matches prerequisites and reviewing build configurations. Always consult platform-specific guides for details.
+For detailed setup, installation, and usage guidelines, consult the Getting Started guides and the Primer.
 </Note>
 
 ---
 
-## 7. Additional Resources
+# References
 
-- [GoogleTest Primer](docs/primer.md) — Learn the basics of writing tests
-- [GoogleMock for Dummies](googlemock/README.md) — Understand mocking concepts and usage
-- [Mocking Reference](docs/reference/mocking.md) — Comprehensive mock API
-- [GoogleTest Troubleshooting FAQ](/faq/troubleshooting-and-best-practices/build-and-link-errors)
-- [Community Support](https://github.com/google/googletest/issues) — Report issues or get help
+- [GoogleTest Primer](primer.md)
+- [Assertions Reference](reference/assertions.md)
+- [Running Your First Test](getting-started/first-test-experience/writing-first-test.md)
+- [Troubleshooting Common Issues](getting-started/troubleshooting/common-issues.md)
+- [FAQ on Underscores in Test Names](faq.md#why-should-test-suite-names-and-test-names-not-contain-underscore)
 
----
-
-## Summary Diagram
-
-```mermaid
-flowchart TD
-  A[Start Test Setup] --> B[Check Compiler & Build Tools]
-  B --> C{Is environment ready?}
-  C -->|No| D[Fix Environment Issues]
-  D --> B
-  C -->|Yes| E[Build/Link GoogleTest & Mocks]
-  E --> F{Build Success?}
-  F -->|No| G[Review build/link errors]
-  G --> E
-  F -->|Yes| H[Write Your First Test or Use Sample]
-  H --> I[Run Test Executable]
-  I --> J{Did tests run?}
-  J -->|No| K[Verify test discovery & RUN_ALL_TESTS()]
-  K --> I
-  J -->|Yes| L{Failures or Warnings?}
-  L -->|Yes| M[Review error messages and fix]
-  M --> H
-  L -->|No| N[Setup Validated - Proceed]
-```
-
----
-
-<Tip>
-Use the above flow to systematically verify and fix your setup before progressing to writing extensive tests.
-</Tip>
